--- a/OnlineLecture/OnlineLecture.csproj
+++ b/OnlineLecture/OnlineLecture.csproj
@@ -7,6 +7,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="wwwroot\js\AdminManagerment\**" />
+    <Content Remove="wwwroot\js\AdminManagerment\**" />
+    <EmbeddedResource Remove="wwwroot\js\AdminManagerment\**" />
+    <None Remove="wwwroot\js\AdminManagerment\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="7.0.12" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.12" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="7.0.12">
