--- a/OnlineLecture/appsettings.json
+++ b/OnlineLecture/appsettings.json
@@ -8,6 +8,9 @@
   "AllowedHosts": "*",
   //"ConnectionStrings": { "conn": "data source=.;initial catalog=OnlineLecture;integrated security=true" }
   //"ConnectionStrings": { "Conn": "Server=ADMIN-PC\\SQLEXPRESS;Database=OnlineLecture;Trusted_Connection=True;TrustServerCertificate=True" }
-  "ConnectionStrings": { "Conn": "Server=DESKTOP-KT13CIN\\SQLEXPRESS;Database=OnlineLecture;Trusted_Connection=True;TrustServerCertificate=True" }
+
+  "ConnectionStrings": { "Conn": "Server=DESKTOP-S9VMCCG\\HTVN;Database=OnlineLecture;Trusted_Connection=True;TrustServerCertificate=True" }
+  //"ConnectionStrings": { "Conn": "Server=DESKTOP-KT13CIN\\SQLEXPRESS;Database=OnlineLecture;Trusted_Connection=True;TrustServerCertificate=True" }
+
 
 }
